<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <!-- TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_bar_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:hintEnabled="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onStartIconClick"
        app:layout_constraintEnd_toStartOf="@+id/search_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- TextInputEditText -->

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Search icon -->

    <!-- Calendar icon -->

    <ImageButton
        android:id="@+id/search_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="64dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/search"
        android:src="@drawable/search"
        app:layout_constraintEnd_toStartOf="@+id/calendar_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_bar_layout" />

    <ImageButton
        android:id="@+id/calendar_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/calendar_search"
        android:src="@android:drawable/ic_menu_today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_bar_layout" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_bar"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/search_String"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
